--- a/src/footer.css
+++ b/src/footer.css
@@ -3,3 +3,13 @@
     background: #e5e5e5;
     position: relative;
   }
+
+  .footer span {
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 3px;
+    background: #b8b8b8;
+  }
