--- a/src/navbar.css
+++ b/src/navbar.css
@@ -5,4 +5,13 @@ nav.topnav {
     background-color: #333;
     font-family: "Chewy";
   }
+  nav.topnav a {
+    color: #f2f2f2;
+    text-align: center;
+    padding: 8px 15px;
+    margin-bottom: 12px;
+    text-decoration: none;
+    font-size: 16px;
+    transition: all 0.2s ease-in-out;
+  }
   
