--- a/src/navbar.css
+++ b/src/navbar.css
@@ -14,4 +14,9 @@ nav.topnav {
     font-size: 16px;
     transition: all 0.2s ease-in-out;
   }
+  nav.topnav a:hover {
+    color: #f2f2f2;
+    font-size: 18px;
+  }
+  
   
