--- a/src/banner.css
+++ b/src/banner.css
@@ -5,4 +5,12 @@
     background-size: cover;
     position: relative;
   }
+  .banner-text {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+  }
   
