--- a/src/banner.css
+++ b/src/banner.css
@@ -13,4 +13,8 @@
     transform: translate(-50%, -50%);
     color: white;
   }
+  .banner-text p {
+    font-size: 16px;
+    font-family: "Montserrat", sans-serif;
+  }
   
