--- a/src/pageHeader.css
+++ b/src/pageHeader.css
@@ -13,4 +13,8 @@
     transform: translate(-50%, -50%);
     color: white;
   }
+  .hero-text h1 {
+    font-family: "Chewy", cursive;
+    font-size: 50px;
+  }
   
