--- a/src/pageHeader.css
+++ b/src/pageHeader.css
@@ -17,4 +17,8 @@
     font-family: "Chewy", cursive;
     font-size: 50px;
   }
+  .hero-text p {
+    font-size: 14px;
+    font-family: "Montserrat", sans-serif;
+  }
   
