--- a/src/emplytable.css
+++ b/src/emplytable.css
@@ -24,4 +24,12 @@
     padding-left: 35px;
     text-align: left;
   }
-   
+  table {
+    font-family: "Acme", sans-serif;
+    border-collapse: collapse;
+    font-size: 0.9em;
+    font-family: sans-serif;
+    min-width: 400px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+  }
+    
