--- a/src/emplytable.css
+++ b/src/emplytable.css
@@ -32,4 +32,10 @@
     min-width: 400px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
   }
-    
+  table thead tr {
+    background-color: #009879;
+    color: #ffffff;
+    text-align: left;
+    cursor: pointer;
+  }
+     
