--- a/src/emplytable.css
+++ b/src/emplytable.css
@@ -51,4 +51,8 @@
   .index-column {
     font-weight: bolder;
   }
+  table tbody tr:nth-of-type(even) {
+    background-color: #f3f3f3;
+  }
+   
             
