--- a/src/emplytable.css
+++ b/src/emplytable.css
@@ -54,5 +54,10 @@
   table tbody tr:nth-of-type(even) {
     background-color: #f3f3f3;
   }
+  table tbody tr:last-of-type {
+    border-bottom: 2px solid #009879;
+  }
+  
+  
    
             
