--- a/src/emplytable.css
+++ b/src/emplytable.css
@@ -57,7 +57,10 @@
   table tbody tr:last-of-type {
     border-bottom: 2px solid #009879;
   }
-  
+  img {
+    border-radius: 50px;
+  }
+   
   
    
             
