--- a/src/emplytable.css
+++ b/src/emplytable.css
@@ -86,7 +86,19 @@
   .dropdown {
     float: left;
   }
-   
+  .dropdown .dropdown-button {
+    height: 35px;
+    border: 2px solid #ddd;
+    border-radius: 5px;
+    padding: 0px 10px;
+    margin: 0px;
+    font-weight: 500;
+    font-size: 14px;
+    background-color: white;
+    color: grey;
+    text-transform: none;
+  }
+    
        
    
   
