--- a/src/emplytable.css
+++ b/src/emplytable.css
@@ -98,7 +98,14 @@
     color: grey;
     text-transform: none;
   }
-    
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 100px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  }
+      
        
    
   
