--- a/src/emplytable.css
+++ b/src/emplytable.css
@@ -105,6 +105,17 @@
     min-width: 100px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   }
+  .dropdown-content li {
+    list-style: none;
+    margin-left: none;
+    padding: 5px 5px;
+    color: black;
+    text-decoration: none;
+    display: block;
+    text-align: center;
+    cursor: pointer;
+  }
+   
       
        
    
