--- a/src/emplytable.css
+++ b/src/emplytable.css
@@ -115,6 +115,10 @@
     text-align: center;
     cursor: pointer;
   }
+  .dropdown-content li:hover {
+    background-color: #ddd;
+  }
+  
    
       
        
