--- a/src/components/Banner/banner.css
+++ b/src/components/Banner/banner.css
@@ -1,38 +1,48 @@
+@import url('https://fonts.googleapis.com/css2?family=Marcellus&family=Poiret+One&family=Rock+Salt&display=swap');
+
 .banner-image {
-    height: 500px;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-  }
-  .banner-text {
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-  }
-  .banner-text p {
-    font-size: 16px;
-    font-family: "Montserrat", sans-serif;
-  }
-  .banner-text button {
-    font-family: "Chewy", cursive;
-    font-weight: 20px;
-    border: none;
-    outline: 0;
-    display: inline-block;
-    padding: 10px 29px;
-    color: #ddd;
-    background-color: #009879;
-    text-align: center;
-    border-radius: 20px;
-    cursor: pointer;
-    transition: all 0.2s ease-in-out;
-  }
-  .banner-text button:hover {
-    color: white;
-    transform: scale(1.1);
-  }
-  
+  height: 500px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+.banner-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+}
+
+.banner-text h1 {
+  font-family: 'Rock Salt', cursive;
+  font-size: 50px;
+}
+
+.banner-text p {
+  font-size: 16px;
+  font-family: "Montserrat", sans-serif;
+}
+
+.banner-text button {
+  font-family: 'Poiret One', cursive;
+  font-weight: 20px;
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 10px 29px;
+  color: #ddd;
+  background-color: #009879;
+  text-align: center;
+  border-radius: 20px;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+}
+
+.banner-text button:hover {
+  color: white;
+  transform: scale(1.1);
+}
