Updated banner descri and fonts

--- a/src/components/PageHeader/pageHeader.css
+++ b/src/components/PageHeader/pageHeader.css
@@ -23,12 +23,12 @@
 }
 
 .hero-text p {
-  font-size: 14px;
-  font-family: "Montserrat", sans-serif;
+  font-size: 15px;
+  font-family: 'Marcellus', serif;
 }
 
 .hero-text button {
-  font-family: "Chewy", cursive;
+  font-family: 'Poiret One', cursive;
   font-weight: 20px;
   border: none;
   outline: 0;
