--- a/src/components/Banner/banner.css
+++ b/src/components/Banner/banner.css
@@ -24,7 +24,7 @@
 
 .banner-text p {
   font-size: 16px;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Marcellus', serif;
 }
 
 .banner-text button {
